--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import './styles/components/settings.css';
 @import './styles/components/me.css';
 @import './styles/components/pull-to-refresh.css';
+@import './styles/components/skeletons.css';
 @import './styles/utils/animations.css';
 @import './styles/utils/utilities.css';
 @import './styles/utils/legacy.css';
