fix: properly display FontAwesome icons in login buttons
- Import and use FontAwesomeIcon component from @fortawesome/react-fontawesome
- Add puzzle piece icon (faPuzzlePiece) for Extension button
- Add shield icon (faShieldHalved) for Bunker button
- Add info circle icon (faCircleInfo) for error messages
- Update CSS to properly style SVG icons with correct sizing

--- a/src/styles/components/login.css
+++ b/src/styles/components/login.css
@@ -57,8 +57,10 @@
   min-height: var(--min-touch-target);
 }
 
-.login-button i {
+.login-button svg {
   font-size: 1.125rem;
+  width: 1.125rem;
+  height: 1.125rem;
 }
 
 .login-button-primary {
@@ -185,8 +187,10 @@
   line-height: 1.5;
 }
 
-.login-error i {
+.login-error svg {
   font-size: 1.125rem;
+  width: 1.125rem;
+  height: 1.125rem;
   color: rgb(251, 191, 36);
   flex-shrink: 0;
 }
